Edit hero-container margin property to margin-block-start to resolve 'margin overflow'

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
 .hero-container {
     display: flex;
     justify-content: space-between;
-    margin-block: 100px;
+    margin-block-start: 100px;
     padding-bottom: 100px;
 }
 
